gccida/c3/add_bound_info
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_bound_info/src/dwarf2out.c:9547:48: error: must use 'enum' tag to refer to type 'dwarf_attribute'
void  add_bound_info( dw_die_ref subrange_die, dwarf_attribute bound_attr, tree bound) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_bound_info/src/dwarf2out.c:9556:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_bound_info/src/dwarf2out.c:9592:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v48; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_bound_info/src/dwarf2out.c:9594:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v50; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_bound_info/src/dwarf2out.c:9936:22: error: use of undeclared identifier 'machine_mode'
v35 = gen_rtx_MEM( ( machine_mode)*( ( unsigned __int8 *)v35 + 2), fixed); 
                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_bound_info/src/obj/dwarf2out.o] Error 1
